--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,19 +3,9 @@
 {
 	"name": "Python 3",
 
-	// This is the default
-	// "image": "mcr.microsoft.com/devcontainers/universal:2",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
 
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	//"image": "mcr.microsoft.com/devcontainers/python:1-${templateOption:imageVariant}",
-	//"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
-
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": ".."
-	},
-
-    "postCreateCommand": "python3 -m pip install --upgrade pip && python3 -m pip install -r requirements.txt",
+	"postCreateCommand": "bash .devcontainer/install.sh",
 
     "customizations": {
 	    "codespaces": {
